added capybara gem to gemfile

--- a/p2-app/Gemfile
+++ b/p2-app/Gemfile
@@ -46,4 +46,5 @@ group :development, :test do
   gem 'better_errors'
   gem 'binding_of_caller'
   gem 'pry-rails'
+  gem 'capybara', '~> 2.4.0'
 end
