--- a/p2-app/Gemfile
+++ b/p2-app/Gemfile
@@ -47,4 +47,5 @@ group :development, :test do
   gem 'binding_of_caller'
   gem 'pry-rails'
   gem 'capybara', '~> 2.4.0'
+  gem 'selenium-webdriver', '~> 2.42.0'
 end
