--- a/p2-app/Gemfile
+++ b/p2-app/Gemfile
@@ -44,6 +44,8 @@ group :development do
   gem 'shoulda-matchers', require: false
   gem 'better_errors'
   gem 'binding_of_caller'
+  gem 'pry-rails'
+  gem 'awesome_print'
 end
 
 gem 'rails_12factor', group: :production
